syntax = "proto3";

package customer;

option go_package = "api/proto/customerpb";

service CustomerService {
  rpc UpsertCustomer (UpsertCustomerRequest) returns (CustomerResponse);
}

message UpsertCustomerRequest {
  string idn = 1;
}

message CustomerResponse {
  // UUID v4 as string
  string id = 1;
  string idn = 2;
  // RFC3339 timestamp string
  string created_at = 3;
}
